# CalcFAD

./: .gitignore  README.md  app.py  instalar.py  pyproject.toml
fad/: models.py  utils.py
tests/: conftest.py  test_app.py  test_models.py  test_utils.py
